move classpath to env